# key_board_layout_generator

./: .gitignore  Cargo.toml  README.md  best.txt  kinesis.layout
src/: layout_format.rs  lib.rs  main.rs
