[package]
name = "keyboard_layout_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
device_query = "2.1.0"
genetic = { version = "0.1.0", path = "../genetic", features = ["parallel"] }
paste = "1.0.15"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
